Feat : Numbering 컴포넌트 구현_#30

--- a/src/pages/productList/productList.html
+++ b/src/pages/productList/productList.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SVG Display Component</title>
+    <title>Pagination SVG Display</title>
 </head>
 <body>
+    <h1>Numbering SVG Component Example</h1>
+    <numbering-container id="svg-container"></numbering-container>
 
-    <script src="productList.js"></script>
+    <!-- numbering.js 파일을 불러오기 -->
+    <script type="module"></script>
+
 </body>
 </html>
