Feat : Numbering 컴포넌트 구현_#30

--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Numbering SVG Component Example</title>
+<!doctype html>
+<html lang="ko-KR">
+  <head>
+    <title>Vite Pure css</title>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="/src/styles/style.css" />
+    <link rel="stylesheet" href="/src/styles/reset.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script type="module" src="/main.js"></script>
+  </head>
+  <body>
+    <div id="app">
+      hello css!
+    </div>
 
-</head>
-<body>
-<h1>g</h1>
-    <numbering-container id="svg-container"></numbering-container>
-    <script type="module">
-        import './src/pages/productList/numbering.js';
-    </script>
-</body>
-</html>
+
+  </body>
