Feat: Input/Text 컴포넌트 구현_#14

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 	<cart-icon></cart-icon>
 	<default-icon-heart></default-icon-heart>
 	<heart-icon></heart-icon>
-	<numbering-container id="svg-container"></numbering-container>
+	<numbering-container></numbering-container>
     <nav-menu></nav-menu>
 	<navMenuItem></navMenuItem>
 	<header-category></header-category>
 	<header-category-item-list></header-category-item-list>
-	
+
   </body>
 </html>
