--- a/index.html
+++ b/index.html
@@ -10,18 +10,15 @@
     <script type="module" src="/src/main.js"></script>
   </head>
   <body>
-    <div id="app">
-      hello css!
-    </div>
-	<div><a href="/src/pages/login/login.html">로그인</a></div>
-	<cart-icon></cart-icon>
-	<default-icon-heart></default-icon-heart>
-	<heart-icon></heart-icon>
-	<numbering-container id="svg-container"></numbering-container>
+    <div id="app">hello css!</div>
+    <div><a href="/src/pages/login/login.html">로그인</a></div>
+    <cart-icon></cart-icon>
+    <default-icon-heart></default-icon-heart>
+    <heart-icon></heart-icon>
+    <numbering-container id="svg-container"></numbering-container>
     <nav-menu></nav-menu>
-	<navMenuItem></navMenuItem>
-	<header-category></header-category>
-	<header-category-item-list></header-category-item-list>
-	
+    <navMenuItem></navMenuItem>
+    <header-category></header-category>
+    <header-category-item-list></header-category-item-list>
   </body>
 </html>
