--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
     <div id="app">hello css!</div>
     <div><a href="/src/pages/login/login.html">로그인</a></div>
+    <div><a href="/src/pages/mainPage/index.html">메인페이지</a></div>
     <cart-icon></cart-icon>
     <default-icon-heart></default-icon-heart>
     <heart-icon></heart-icon>
