Docs: index.html에 mainPage.js 연결
* 변경사항
- product-slide 랜더링 mainPage/index.html -> src/index.html로 변경 (mainPage/index.html이 메인페이지라고 착각했음. src/index.html이 메인 페이지이기 때문에 메인페이지의 product slide를 실행하는 mainPage.js 파일을 src/index.html파일로 옮겼음)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/src/styles/reset.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/pages/mainPage/mainPage.js"></script>
   </head>
   <body>
     <div id="app">hello css!</div>
@@ -21,5 +22,21 @@
     <navMenuItem></navMenuItem>
     <header-category></header-category>
     <header-category-item-list></header-category-item-list>
+
+    <h2>이 상품 어때요?</h2>
+    <div class="product-slide-container main-first-products">
+      <ul></ul>
+    </div>
+
+    <!-- <br> : 구분을 위해 임시로 써놨음 (이후에 삭제할 코드) -->
+    <br />
+    <br />
+    <br />
+    <!-- 여기까지 -->
+
+    <h2>놓치면 후회할 가격</h2>
+    <div class="product-slide-container main-second-products">
+      <ul></ul>
+    </div>
   </body>
 </html>
