--- a/src/pages/mainPage/index.html
+++ b/src/pages/mainPage/index.html
@@ -6,23 +6,19 @@
     <title>main page</title>
     <link rel="stylesheet" href="/src/styles/style.css" />
     <link rel="stylesheet" href="/src/styles/reset.css" />
-    <script type="module" src="/src/pages/mainPage/mainPage.js"></script>
+    <!-- <script type="module" src="/src/pages/mainPage/mainPage.js"></script> -->
   </head>
   <body>
+    <!--
     <h2>이 상품 어때요?</h2>
     <div class="product-slide-container main-first-products">
       <ul></ul>
     </div>
 
-    <!-- <br> : 구분을 위해 임시로 써놨음 (이후에 삭제할 코드) -->
-    <br />
-    <br />
-    <br />
-    <!-- 여기까지 -->
-
     <h2>놓치면 후회할 가격</h2>
     <div class="product-slide-container main-second-products">
       <ul></ul>
-    </div>
+    </div> 
+    -->
   </body>
 </html>
