--- a/index.html
+++ b/index.html
@@ -7,44 +7,24 @@
   </head>
   <body>
     <div id="app"></div>
-    <!-- <script type="module" src="./src/components/table-sell.js"></script> -->
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.min.js"
+      integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+      crossorigin="anonymous"
+    ></script>
+    <script type="module" src="./src/components/table-title.js"></script>
     <script type="module" src="./src/components/table-answer.js"></script>
-    <!-- <table-sell
-      title="팩이 터져서 왔어요"
-      author="손승우"
-      date="2022.11.11"
-      isAwait="0"
-      isSecret="0"
-    ></table-sell>
-    <table-sell
-      title="팩이 터져서 왔어요"
-      author="손승우"
-      date="2022.11.11"
-      isAwait="1"
-      isSecret="1"
-    ></table-sell>
-    <table-sell
-      title="팩이 터져서 왔어요"
-      author="김땡땡땡"
-      date="2022.11.11"
-      isAwait="1"
-      isSecret="0"
-    ></table-sell>
+    <script type="module" src="./src/components/table-sell.js"></script>
     <table-sell
       title="팩이 터져서 왔어요"
       author="손승우"
       date="2022.11.11"
       isAwait="0"
       isSecret="1"
-    ></table-sell> -->
-    <table-answer
-      question="스티로폼 박스도 손상되어 있어 포장이 터져 엉망이네요.\n환불 요청합니다."
-      answer="안녕하세요. 칼리입니다.\n믿고 찾아주신 상품에 불편을 드려 정말 죄송합니다.\n\n더불어, 해당 게시판은 실시간으로 상담이 어려워 순차적으로 답변드리고 있는 관계로 신속하게 답변 드리지 못하여 대단히 죄송합니다.\n\n다행히도 고객님의 불편하셨던 사항은 고객행복센터를 통해 안내 받으신 점 확인하였습니다.\n\n불편을 드려 정말 죄송할 따름이며, 고객님께 늘 신선하고 최상의 상품을 불편 없이 전달드리기 위해 최선을 다하는 칼리가 되겠습니다.\n\n칼리 드림."
-      date="2020.01.01"
-    ></table-answer>
-
-    <div class="icon">
-      <!-- <svg><use href="/public/sprite/icons.svg#Answer"></use></svg> -->
-    </div>
+      question="스티로폼 박스도 손상되어 있어 포장이 터져 엉망이네요.<br>환불 요청합니다."
+      answer="안녕하세요. 칼리입니다.<br>믿고 찾아주신 상품에 불편을 드려 정말 죄송합니다.<br><br>더불어, 해당 게시판은 실시간으로 상담이 어려워 순차적으로 답변드리고 있는 관계로 신속하게 답변 드리지 못하여 대단히 죄송합니다.<br><br>다행히도 고객님의 불편하셨던 사항은 고객행복센터를 통해 안내 받으신 점 확인하였습니다.<br><br>불편을 드려 정말 죄송할 따름이며, 고객님께 늘 신선하고 최상의 상품을 불편 없이 전달드리기 위해 최선을 다하는 칼리가 되겠습니다.<br><br>칼리 드림."
+      answerDate="2020.01.01"
+    >
+    </table-sell>
   </body>
 </html>
