--- a/index.html
+++ b/index.html
@@ -1,30 +1,42 @@
 <!doctype html>
-<html lang="ko">
+<html lang="ko-KR">
   <head>
+    <title>Vite Pure css</title>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="/src/styles/style.css" />
+    <link rel="stylesheet" href="/src/styles/reset.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>확인용</title>
+    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/pages/mainPage/mainPage.js"></script>
   </head>
   <body>
-    <div id="app"></div>
-    <script
-      src="https://code.jquery.com/jquery-3.7.1.min.js"
-      integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
-      crossorigin="anonymous"
-    ></script>
-    <script type="module" src="./src/components/table-title.js"></script>
-    <script type="module" src="./src/components/table-answer.js"></script>
-    <script type="module" src="./src/components/table-sell.js"></script>
-    <table-sell
-      title="팩이 터져서 왔어요"
-      author="손승우"
-      date="2022.11.11"
-      isAwait="0"
-      isSecret="1"
-      question="스티로폼 박스도 손상되어 있어 포장이 터져 엉망이네요.<br>환불 요청합니다."
-      answer="안녕하세요. 칼리입니다.<br>믿고 찾아주신 상품에 불편을 드려 정말 죄송합니다.<br><br>더불어, 해당 게시판은 실시간으로 상담이 어려워 순차적으로 답변드리고 있는 관계로 신속하게 답변 드리지 못하여 대단히 죄송합니다.<br><br>다행히도 고객님의 불편하셨던 사항은 고객행복센터를 통해 안내 받으신 점 확인하였습니다.<br><br>불편을 드려 정말 죄송할 따름이며, 고객님께 늘 신선하고 최상의 상품을 불편 없이 전달드리기 위해 최선을 다하는 칼리가 되겠습니다.<br><br>칼리 드림."
-      answerDate="2020.01.01"
-    >
-    </table-sell>
+    <div id="app">hello css!</div>
+    <div><a href="/src/pages/login/login.html">로그인</a></div>
+    <div><a href="/src/pages/mainPage/mainPage.html">메인페이지</a></div>
+    <cart-icon></cart-icon>
+    <default-icon-heart></default-icon-heart>
+    <heart-icon></heart-icon>
+    <numbering-container id="svg-container"></numbering-container>
+    <nav-menu></nav-menu>
+    <navMenuItem></navMenuItem>
+    <header-category></header-category>
+    <header-category-item-list></header-category-item-list>
+
+    <h2>이 상품 어때요?</h2>
+    <div class="product-slide-container main-first-products">
+      <ul></ul>
+    </div>
+
+    <!-- <br> : 구분을 위해 임시로 써놨음 (이후에 삭제할 코드) -->
+    <br />
+    <br />
+    <br />
+    <!-- 여기까지 -->
+
+    <h2>놓치면 후회할 가격</h2>
+    <div class="product-slide-container main-second-products">
+      <ul></ul>
+    </div>
   </body>
 </html>
