--- a/src/pages/mainPage/mainPage.html
+++ b/src/pages/mainPage/mainPage.html
@@ -6,19 +6,10 @@
     <title>main page</title>
     <link rel="stylesheet" href="/src/styles/style.css" />
     <link rel="stylesheet" href="/src/styles/reset.css" />
+    <script type="module" src="/src/pages/mainPage/banner.js"></script>
     <!-- <script type="module" src="/src/pages/mainPage/mainPage.js"></script> -->
   </head>
   <body>
-    <!--
-    <h2>이 상품 어때요?</h2>
-    <div class="product-slide-container main-first-products">
-      <ul></ul>
-    </div>
-
-    <h2>놓치면 후회할 가격</h2>
-    <div class="product-slide-container main-second-products">
-      <ul></ul>
-    </div> 
-    -->
+    <main-banner><main-banner>
   </body>
 </html>
