Feat: default/logo 컴포넌트 & default/switch 컴포넌트 같이 구현
* 변경사항
- default-logo.js 생성

--- a/src/pages/mainPage/mainPage.html
+++ b/src/pages/mainPage/mainPage.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="/src/styles/style.css" />
     <link rel="stylesheet" href="/src/styles/reset.css" />
     <script type="module" src="/src/pages/mainPage/banner.js"></script>
+    <script type="module" src="/src/components/default-logo.js"></script>
     <!-- <script type="module" src="/src/pages/mainPage/mainPage.js"></script> -->
   </head>
   <body>
-    <main-banner><main-banner>
+    <main-banner></main-banner>
+    <default-logo></default-logo>
   </body>
 </html>
