Feat: cart-accordion 컴포넌트 완성_#28

--- a/forhtml.html
+++ b/forhtml.html
@@ -11,3 +11,24 @@
     </div>
   </div>
 </div>
+
+<div class="cartclass-container">
+  <div class="icon"></div>
+  <div class="classname"></div>
+</div>
+
+<div class="cartproduct-container">
+  <button class="check-icon"></button>
+  <div class="product-img"></div>
+  <p class="product-title"></p>
+  <div class="quantity-container">
+    <button class="quantity-btn">-</button>
+    <span class="quantity-number">1</span>
+    <button class="quantity-btn">+</button>
+  </div>
+  <div class="price">
+    <p class="discount-price"></p>
+    <p class="regular-price"></p>
+  </div>
+  <button class="close"></button>
+</div>
