Feat:; 헤더 & 메인페이지 조립
* 변경사항
- mainPage.html에 메인페이지 조립
- Header.js에 헤더 조립
- base.css 생성 (sr-only 클래스)

--- a/src/pages/productList/productList.html
+++ b/src/pages/productList/productList.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/src/styles/reset.css" />
     <link rel="stylesheet" href="/src/pages/productList/productList.css" />
     <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/pages/productList/productList.js"></script>
   </head>
   <body>
     <h2>베스트</h2>
