로그인 페이지

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -4,8 +4,17 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Document</title>
+	<link rel="stylesheet" href="/src/pages/login/style.css" />
+	<script type="module" src="/src/main.js"></script>
+	<script type="module" src="/src/components/input-text.js"></script>
 </head>
 <body>
-	로그인 페이지
+	<div class="middle">
+		<div class="login-font">로그인</div>
+		<div class="login-text-container">
+		<input-text-container label="아이디를 입력해주세요"></input-text-container>
+		<input-text-container label="비밀번호를 입력해주세요"></input-text-container>
+	</div>
+</div>
 </body>
 </html>
