Feat : productDetailPage 조립_#69

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
     <h2>놓치면 후회할 가격</h2>
     <div class="product-slide-container main-second-products">
+		<div><a href="/src/pages/productDetail/index.html">페이지</a></div>
       <ul></ul>
     </div>
   </body>
