--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Document</title>
-	<link rel="stylesheet" href="/src/pages/login/style.css" />
-	<script type="module" src="/src/main.js"></script>
-	<script type="module" src="/src/components/input-text.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>마켓컬리</title>
+  <link rel="stylesheet" href="style.css" />
+  <script type="module" src="components.js"></script>
 </head>
 <body>
-	<div class="middle">
-		<div class="login-font">로그인</div>
-		<div class="login-text-container">
-		<input-text-container label="아이디를 입력해주세요"></input-text-container>
-		<input-text-container label="비밀번호를 입력해주세요"></input-text-container>
-	</div>
-</div>
+  <div class="container">
+    <login-component></login-component>
+  </div>
 </body>
 </html>
