#메인페이지 recent-views 추가 조립

--- a/src/pages/mainPage/mainPage.html
+++ b/src/pages/mainPage/mainPage.html
@@ -37,6 +37,10 @@
           <ul></ul>
         </div>
       </section>
+
+      <aside>
+        <recent-viewed></recent-viewed>
+      </aside>
     </div>
 
     <footer-component></footer-component>
