--- a/src/pages/productDetail/index.html
+++ b/src/pages/productDetail/index.html
@@ -6,10 +6,11 @@
     <title>Product Count Page</title>
 	<script type="module" src="/src/pages/productDetail/product-Detail.js"></script>
 	<link rel="stylesheet" href="/src/pages/productDetail/style.css">
-	<c-header></c-header>
 </head>
 <body>
-
+	<top-banner></top-banner>
+	<c-header></c-header>
+	<div class="gradient-border"></div>
 	<div class="container">
         <div class="left">
             <img src="/src/assets/images/product-detail.svg" alt="상품 이미지">
@@ -30,15 +31,16 @@
                             <div class="quantity-control">
                             	<product-count data-initial-value="1"></product-count>
                             </div>
-                            <span class="price">4,980원</span>
+								<span class="price">4,980원</span>
                         </div>
                     </div>
                 </div>
 			</div>	
+			
 
-			<div class="totalprice">
+			<div class="total-price">
 				<img src="/src/assets/images/totalprice.svg" alt="총 상품금액">
-				<span id="totalPrice">4,980</span> <!-- 총 상품금액이 표시될 곳 -->
+				<span id="totalPrice">4,980</span>
 				<img src="/src/assets/images/won.svg" alt="원">
 			</div>
 
@@ -46,14 +48,81 @@
 			<heart-icon></heart-icon>
 			<img src="/src/assets/images/bell.svg" alt="알림">
 			</div>
-
         </div>
 	</div>
 
+	<div class="button-box">
+        <button id="productDescBtn" class="usetab-button">상품설명</button>
+        <button id="detailInfoBtn" class="tab-button">상세정보</button>
+        <button id="reviewBtn" class="tab-button">후기</button>
+        <button id="inquiryBtn" class="tab-button">문의</button>
+    </div>
+	
 	    <div class="product-description">
 			<img src="/src/assets/images/product-description-top.svg" alt="상품 상세설명 상단">
 			<img src="/src/assets/images/product-description-middle.svg" alt="상품 상세설명 중단">
 		</div>
 
+		<div class="product-review">
+			<img src="/src/assets/images/product-reviews.svg" alt="상품후기">
+			<img src="/src/assets/images/review-button.svg" alt="리뷰버튼" onclick="openReviewPopup();" style="cursor: pointer;">
+			<script>
+				function openReviewPopup() {
+					const popup = window.open('/src/pages/productDetail/review.html', 'reviewPopup', 'width=600,height=600');
+					popup.focus();
+				}
+			</script>
+		</div>
+		<div class="review-board">
+		<div class="notice-container">
+			<button class="notice">
+				<img src="/src/assets/images/notice1.svg" alt="Notice 1">
+			</button>
+			<div class="panel">
+				<img src="/src/assets/images/notice-detail1.svg" alt="Notice Detail 1">
+			</div>	
+			<script>
+				document.addEventListener('DOMContentLoaded', function () {
+					var acc = document.getElementsByClassName("notice");
+					var i;
+			
+					for (i = 0; i < acc.length; i++) {
+						acc[i].addEventListener("click", function () {
+							this.classList.toggle("active");
+							var panel = this.nextElementSibling;
+							if (panel.style.display === "block") {
+								panel.style.display = "none";
+							} else {
+								panel.style.display = "block";
+							}
+						});
+					}
+				});
+			</script>	
+		</div>
+		</div>
+		<div class="product-review-detail">
+			<img src="/src/assets/images/review-pagenation.svg" alt="상품후기 페이지버튼" class="clickable">
+		</div>
+		<div class="product-inquiry">
+			<img src="/src/assets/images/product-inquiry.svg" alt="상품문의">
+			<img src="/src/assets/images/inquiry-button.svg" alt="문의버튼" onclick="openInquiryPopup();" style="cursor: pointer;">
+			<script>
+				function openInquiryPopup() {
+					const popup = window.open('/src/pages/productDetail/inquiry.html', 'inquiryPopup', 'width=600,height=600');
+					popup.focus();
+				}
+			</script>
+		</div>
+		<div class="product-inquiry-detail">
+			<img src="/src/assets/images/review-pagenation.svg" alt="상품문의 페이지버튼" class="clickable">
+		</div>
+
+		<footer>
+			<footer-component></footer-component>
+		</footer>
+
+
+		
 </body>
 </html>
