Feat : productDetailPage 조립_ #69

--- a/src/pages/productDetail/index.html
+++ b/src/pages/productDetail/index.html
@@ -54,7 +54,7 @@
 	<div class="button-box">
         <button id="productDescBtn" class="usetab-button">상품설명</button>
         <button id="detailInfoBtn" class="tab-button">상세정보</button>
-        <button id="reviewBtn" class="tab-button">후기</button>
+        <button id="reviewBtn" class="tab-button">후기 (0)</button>
         <button id="inquiryBtn" class="tab-button">문의</button>
     </div>
 	
