--- a/src/pages/productDetail/index.html
+++ b/src/pages/productDetail/index.html
@@ -23,26 +23,66 @@
 			</div>
 
 			<div class="product-detail-count-box">
-                <div class="product-selection-row">
-                    <span>상품선택</span>
-                    <div class="product-selection">
-                        <span class="product-name">[풀무원] 탱탱쫄면 (4개입)</span>
-                        <div class="quantity-price-row">
-                            <div class="quantity-control">
-                            	<product-count data-initial-value="1"></product-count>
-                            </div>
-								<span class="price">4,980원</span>
-                        </div>
-                    </div>
-                </div>
-			</div>	
+				<div class="product-selection-row">
+					<span>상품선택</span>
+					<div class="product-selection">
+						<span class="product-name">[풀무원] 탱탱쫄면 (4개입)</span>
+						<div class="quantity-price-row">
+							<div class="quantity-control">
+								<product-count data-initial-value="1"></product-count>
+							</div>
+							<span class="price" id="price">4,980원</span>
+						</div>
+					</div>
+				</div>
+				<div class="total-price-container">
+					<div class="total-price">
+						<img src="/src/assets/images/totalprice.svg" alt="총 상품금액">
+						<span id="total-price">4,980</span>
+						<img src="/src/assets/images/won.svg" alt="원">
+					</div>
+				</div>
+			</div>
+		
+			<script>
+				document.addEventListener('DOMContentLoaded', function() {
+					const pricePerItem = 4980;
+					const quantityInput = document.getElementById('quantity');
+					const totalPriceSpan = document.getElementById('total-price');
+		
+					function updateTotalPrice() {
+						const quantity = parseInt(quantityInput.value);
+						const totalPrice = pricePerItem * quantity;
+						totalPriceSpan.textContent = `${totalPrice.toLocaleString()}`;
+					}
+		
+					document.getElementById('decrease').addEventListener('click', function() {
+						let quantity = parseInt(quantityInput.value);
+						if (quantity > 1) {
+							quantityInput.value = quantity - 1;
+							updateTotalPrice();
+						}
+					});
+		
+					document.getElementById('increase').addEventListener('click', function() {
+						let quantity = parseInt(quantityInput.value);
+						quantityInput.value = quantity + 1;
+						updateTotalPrice();
+					});
+		
+					quantityInput.addEventListener('input', function() {
+						if (quantityInput.value < 1) {
+							quantityInput.value = 1;
+						}
+						updateTotalPrice();
+					});
+		
+					updateTotalPrice();
+				});
+			</script>
 			
 
-			<div class="total-price">
-				<img src="/src/assets/images/totalprice.svg" alt="총 상품금액">
-				<span id="totalPrice">4,980</span>
-				<img src="/src/assets/images/won.svg" alt="원">
-			</div>
+	
 
 			<div class="heart-incart">
 			<heart-icon></heart-icon>
@@ -54,7 +94,7 @@
 	<div class="button-box">
         <button id="productDescBtn" class="usetab-button">상품설명</button>
         <button id="detailInfoBtn" class="tab-button">상세정보</button>
-        <button id="reviewBtn" class="tab-button">후기 (0)</button>
+        <button id="reviewBtn" class="tab-button">후기</button>
         <button id="inquiryBtn" class="tab-button">문의</button>
     </div>
 	
