Feat : productDetailPage 조립_#69

--- a/src/pages/productDetail/index.html
+++ b/src/pages/productDetail/index.html
@@ -81,12 +81,10 @@
 				});
 			</script>
 			
-
-	
-
 			<div class="heart-incart">
 			<heart-icon></heart-icon>
 			<img src="/src/assets/images/bell.svg" alt="알림">
+			<img src="/src/assets/images/incart.svg" alt="장바구니 담기">
 			</div>
         </div>
 	</div>
