--- a/src/pages/productDetail/index.html
+++ b/src/pages/productDetail/index.html
@@ -140,6 +140,7 @@
 		</div>
 		</div>
 		<div class="product-review-detail">
+			<img src="/src/assets/images/noreview.svg" alt="상품후기 리스트">
 			<img src="/src/assets/images/review-pagenation.svg" alt="상품후기 페이지버튼" class="clickable">
 		</div>
 		<div class="product-inquiry">
@@ -153,6 +154,7 @@
 			</script>
 		</div>
 		<div class="product-inquiry-detail">
+			<img src="/src/assets/images/inquirylist.svg" alt="상품문의 리스트">
 			<img src="/src/assets/images/review-pagenation.svg" alt="상품문의 페이지버튼" class="clickable">
 		</div>
 
