Feat: 헤더 컴포넌트 수정(페이지 연결, 탑헤더 추가, 아랫선 추가)_#83

--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -21,7 +21,7 @@
     <h1 class="sr-only">마켓칼리 장바구니 페이지</h1>
     <c-header></c-header>
     <div class="container">
-      <div class="header"><h2>장바구니</h2></div>
+      <div class="header2"><h2>장바구니</h2></div>
       <div class="main">
         <div class="left-section">
           <div class="selector">
