--- a/src/pages/productList/productList.html
+++ b/src/pages/productList/productList.html
@@ -131,8 +131,8 @@
     </div>
 
 
-    <!-- <footer>
+    <footer>
       <footer-component></footer-component>
-    </footer> -->
+    </footer>
   </body>
 </html>
