--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -26,7 +26,7 @@
         <div class="left-section">
           <div class="selector">
             <button class="check-icon" id="check-icon">
-              <img src="/public/icons/CheckTrue.svg" alt="체크버튼" />
+              <img src="/icons/CheckTrue.svg" alt="체크버튼" />
             </button>
             <button class="select-all">전체선택</button>
             <span class="divider"></span>
@@ -75,7 +75,7 @@
           </div>
           <div class="selector">
             <button class="check-icon" id="check-icon">
-              <img src="/public/icons/CheckTrue.svg" alt="체크버튼" />
+              <img src="/icons/CheckTrue.svg" alt="체크버튼" />
             </button>
             <button class="select-all">전체선택</button>
             <span class="divider"></span>
@@ -89,7 +89,7 @@
           <div class="address-container">
             <div class="header">
               <div class="icon">
-                <svg><use href="/public/sprite/icons.svg#Location"></use></svg>
+                <svg><use href="/sprite/icons.svg#Location"></use></svg>
               </div>
               <p>배송지</p>
             </div>
