Feat: 로그인.js 로직수정, main.js수정_#103

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,27 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LOGIN 페이지</title>
-	<script type="module" src="/src/pages/login/login.js"></script>
-</head>
-<body>
-	<!-- 최상단 배너 -->
-  <top-banner></top-banner>
-	<!-- 헤더 -->
-  <header-component></header-component>
-  <!-- 고객 서비스 -->
-	<c-header></c-header>
-  <!-- 로그인 컴포넌트 -->
-  <login-component></login-component>
-  <!-- 푸터 컴포넌트 -->
-  <footer-component></footer-component>
- 
-
-	
-	
-  
-	
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>LOGIN 페이지</title>
+    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/pages/login/login.js"></script>
+  </head>
+  <body>
+    <!-- 헤더 -->
+    <!-- <header-component></header-component> -->
+    <!-- 고객 서비스 -->
+    <c-header></c-header>
+    <!-- 로그인 컴포넌트 -->
+    <login-component></login-component>
+    <!-- 푸터 컴포넌트 -->
+    <footer-component></footer-component>
+  </body>
 </html>
