Feat: (브랜치명과 기능 다름) 페이지 파비콘 추가, 페이지 이름 변경

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="/src/main.js"></script>
     <script type="module" src="/src/pages/mainPage/mainPage.js"></script>
+    <meta
+      http-equiv="refresh"
+      content="0;url=/src/pages/mainPage/mainPage.html"
+    />
   </head>
   <body>
     <div id="app">hello css!</div>
@@ -36,7 +40,7 @@
 
     <h2>놓치면 후회할 가격</h2>
     <div class="product-slide-container main-second-products">
-		<div><a href="/src/pages/productDetail/index.html">페이지</a></div>
+      <div><a href="/src/pages/productDetail/index.html">페이지</a></div>
       <ul></ul>
     </div>
   </body>
