--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="ko-KR">
   <head>
-    <title>마켓칼리 장바구니 페이지</title>
+    <title>컬리 - 마켓컬리/뷰티컬리</title>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="stylesheet" href="/src/styles/style.css" />
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/src/pages/cart/cart.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="/src/main.js"></script>
-    <script type="module" src="/src/pages/cart/cart.js"></script>
+    <link rel="icon" type="image/x-icon" href="/public/kurly.png" />
     <script
       src="https://code.jquery.com/jquery-3.7.1.min.js"
       integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
@@ -60,6 +60,14 @@
               quantity="1"
               regular-price="16590"
               discount-price="12990"
+            ></cart-products>
+            <cart-products
+              product-image="sample"
+              product-title="[도제] 촉촉한 생식빵 2cm"
+              subtitle="[도제] 촉촉한 생식빵 2종 (택1)"
+              quantity="1"
+              regular-price=""
+              discount-price="6990"
             ></cart-products>
           </div>
           <div class="roomtemp">
