--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LOGIN 페이지</title>
+    <link rel="stylesheet" href="/src/styles/style.css" />
+    <link rel="stylesheet" href="/src/styles/reset.css" />
+    <link rel="stylesheet" href="/src/styles/base.css" />
+    <link rel="icon" type="image/x-icon" href="/public/kurly.png" />
     <script type="module" src="/src/main.js"></script>
     <script type="module" src="/src/pages/login/login.js"></script>
   </head>
   <body>
-    <!-- 헤더 -->
-    <!-- <header-component></header-component> -->
-    <!-- 고객 서비스 -->
+    <h1 class="sr-only">로그인 - 컬리</h1>
     <c-header></c-header>
     <!-- 로그인 컴포넌트 -->
     <login-component></login-component>
