--- a/src/pages/mainPage/mainPage.html
+++ b/src/pages/mainPage/mainPage.html
@@ -4,10 +4,11 @@
 <!doctype html>
 <html lang="ko-KR">
   <head>
-    <title>마켓칼리 메인페이지</title>
+    <title>컬리 - 마켓컬리/뷰티컬리</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/public/kurly.png" />
     <link rel="stylesheet" href="/src/pages/mainPage/mainPage.css" />
     <script type="module" src="/src/pages/mainPage/mainPage.js"></script>
   </head>
