--- a/index.html
+++ b/index.html
@@ -14,34 +14,5 @@
       content="0;url=/src/pages/mainPage/mainPage.html"
     />
   </head>
-  <body>
-    <div id="app">hello css!</div>
-    <div><a href="/src/pages/login/login.html">로그인</a></div>
-    <div><a href="/src/pages/mainPage/mainPage.html">메인페이지</a></div>
-    <cart-icon></cart-icon>
-    <default-icon-heart></default-icon-heart>
-    <heart-icon></heart-icon>
-    <numbering-container id="svg-container"></numbering-container>
-    <nav-menu></nav-menu>
-    <navMenuItem></navMenuItem>
-    <header-category></header-category>
-    <header-category-item-list></header-category-item-list>
-
-    <h2>이 상품 어때요?</h2>
-    <div class="product-slide-container main-first-products">
-      <ul></ul>
-    </div>
-
-    <!-- <br> : 구분을 위해 임시로 써놨음 (이후에 삭제할 코드) -->
-    <br />
-    <br />
-    <br />
-    <!-- 여기까지 -->
-
-    <h2>놓치면 후회할 가격</h2>
-    <div class="product-slide-container main-second-products">
-      <div><a href="/src/pages/productDetail/index.html">페이지</a></div>
-      <ul></ul>
-    </div>
-  </body>
+  <body></body>
 </html>
