--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -35,26 +35,26 @@
           <div class="frozen">
             <cart-class icon="1" title="냉동 상품"></cart-class>
             <cart-products
-              product-image="sample"
-              product-title="[상하목장] 하트바이트 피스타치오 31mlX10개입"
-              subtitle="[상하목장] 하트바이트 아이스크림 31mlX10개입 2종 택1"
+              product-image="주꾸미"
+              product-title="[압구정주꾸미] 주꾸미 볶음 500g"
+              subtitle="[압구정주꾸미] 주꾸미 볶음 2종 (택1)"
               quantity="1"
-              regular-price=""
-              discount-price="50000"
+              regular-price="13400"
+              discount-price="9900"
             ></cart-products>
             <cart-products
-              product-image="sample"
+              product-image="피스타치오"
               product-title="[상하목장] 하트바이트 피스타치오 31mlX10개입"
               subtitle="[상하목장] 하트바이트 아이스크림 31mlX10개입 2종 택1"
               quantity="1"
-              regular-price="10000"
-              discount-price="8000"
+              regular-price="16900"
+              discount-price="13520"
             ></cart-products>
           </div>
           <div class="fridge">
             <cart-class icon="2" title="냉장 상품"></cart-class>
             <cart-products
-              product-image="sample"
+              product-image="고기"
               product-title="[브룩클린668] 호주산 목초육 치마살 구이용 300g(냉장)"
               subtitle=""
               quantity="1"
@@ -62,7 +62,7 @@
               discount-price="12990"
             ></cart-products>
             <cart-products
-              product-image="sample"
+              product-image="식빵"
               product-title="[도제] 촉촉한 생식빵 2cm"
               subtitle="[도제] 촉촉한 생식빵 2종 (택1)"
               quantity="1"
@@ -73,12 +73,12 @@
           <div class="roomtemp">
             <cart-class icon="3" title="상온 상품"></cart-class>
             <cart-products
-              product-image="sample"
-              product-title="[상하목장] 하트바이트 피스타치오 31mlX10개입"
-              subtitle="[상하목장] 하트바이트 아이스크림 31mlX10개입 2종 택1"
+              product-image="고무장갑"
+              product-title="[프로그] 고무장갑 컴포트 퍼플 5개입 소형"
+              subtitle="[프로그] 고무장갑 컴포트 퍼플 3개입&5개입 6종(택1)"
               quantity="1"
-              regular-price="10000"
-              discount-price="8000"
+              regular-price="12900"
+              discount-price="9800"
             ></cart-products>
           </div>
           <div class="selector">
