Feat: 상품상세페이지 변경_#112

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/src/styles/style.css" />
     <link rel="stylesheet" href="/src/styles/reset.css" />
     <link rel="stylesheet" href="/src/styles/base.css" />
-    <link rel="icon" type="image/x-icon" href="/public/kurly.png" />
+    <link rel="icon" type="image/x-icon" href="/kurly.png" />
     <script type="module" src="/src/main.js"></script>
     <script type="module" src="/src/pages/login/login.js"></script>
   </head>
