--- a/src/pages/productList/productList.html
+++ b/src/pages/productList/productList.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>마켓 베스트-컬리</title>
-    <link rel="icon" type="image/x-icon" href="/public/kurly.png" />
+    <link rel="icon" type="image/x-icon" href="/kurly.png" />
     <link rel="stylesheet" href="/src/pages/productList/productList.css" />
     <script type="module" src="/src/pages/productList/productList.js"></script>
   </head>
