--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/src/pages/cart/cart.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="/src/main.js"></script>
-    <link rel="icon" type="image/x-icon" href="/public/kurly.png" />
+    <link rel="icon" type="image/x-icon" href="/kurly.png" />
     <script
       src="https://code.jquery.com/jquery-3.7.1.min.js"
       integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
