--- a/src/pages/mainPage/mainPage.html
+++ b/src/pages/mainPage/mainPage.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="icon" type="image/x-icon" href="/public/kurly.png" />
+    <link rel="icon" type="image/x-icon" href="/kurly.png" />
     <link rel="stylesheet" href="/src/pages/mainPage/mainPage.css" />
     <script type="module" src="/src/pages/mainPage/mainPage.js"></script>
   </head>
