--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="stylesheet" href="/src/pages/register/register.css" />
-    <link rel="icon" type="image/x-icon" href="/public/kurly.png" />
+    <link rel="icon" type="image/x-icon" href="/kurly.png" />
     <script type="module" src="/src/pages/register/register.js"></script>
   </head>
   <body>
