--- a/src/pages/productDetail/index.html
+++ b/src/pages/productDetail/index.html
@@ -17,7 +17,7 @@
       integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
       crossorigin="anonymous"
     ></script>
-    <script type="module" src="main.js"></script>
+    <!-- <script type="module" src="main.js"></script> -->
     <link rel="stylesheet" href="/src/pages/productDetail/style.css" />
   </head>
   <body>
