--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="ko-KR">
   <head>
-    <title>컬리 - 마켓컬리/뷰티컬리</title>
+    <title>칼리 - 마켓칼리/뷰티칼리</title>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="stylesheet" href="/src/styles/style.css" />
