--- a/src/pages/mainPage/mainPage.html
+++ b/src/pages/mainPage/mainPage.html
@@ -4,7 +4,7 @@
 <!doctype html>
 <html lang="ko-KR">
   <head>
-    <title>컬리 - 마켓컬리/뷰티컬리</title>
+    <title>칼리 - 마켓칼리/뷰티칼리</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
